--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
 							</div>
 						</div>
 					</div>
-
+					<!-- <marquee onmouseover="this.setAttribute('scrollamount', 0, 0);" onmouseout="this.setAttribute('scrollamount', 6, 0);">
+						<a href="#">FLASH has got updated Whitepaper! </a>
+					</marquee> -->
+					<marquee onmouseover="this.stop()"
+                   onmouseout="this.start()" scrollamount="10" direction="left" class="style41" style="padding-bottom:15px"><a href="#" data-scrollto="#whitepaper"><img src="images/new-1.gif" alt="New Gif"><b> Click here to check the new FLASH Decentralization Whitepaper</b></a>
+                   </marquee>
+				<!-- <marquee><a href="#">FLASH has got updated Whitepaper!</a></marquee> -->
 			</section>
 			<!-- #slider end -->
 
@@ -844,8 +850,7 @@
 
 							<div class="center">
 
-								<a href="docs/FLASHWhitepaper.pdf" class="button button-3d button-yellow button-xlarge nobottommargin"><i class="icon-star3"></i>DOWNLOAD OUR WHITEPAPER</a> - <a href="docs/FLASHWhitepaper-en-Espanol.pdf" data-scrollto="#section-pricing" class="button button-3d button-yellow button-xlarge nobottommargin"><i class="icon-user2"></i>WHITEPAPER EN ESPAÑOL</a>
-
+								<a href="docs/FLASHWhitepaper.pdf?45146" class="button button-3d button-yellow button-xlarge nobottommargin"><i class="icon-star3"></i>DOWNLOAD OUR WHITEPAPER</a>
 							</div>
 
 							<div class="heading-block title-center nobottomborder topmargin-lg">
