--- a/our-team.html
+++ b/our-team.html
@@ -234,7 +234,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/mr-db.jpg" alt="Mr DB">
+											<img src="images/team/mr-db.png" alt="Mr DB">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -247,7 +247,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/mr-db.jpg" alt="Max">
+											<img src="images/team/no-photo.jpg" alt="Max">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -333,7 +333,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin community-volunteers">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/gabriel.png" alt="Gabriel M.">
+											<img src="images/team/no-photo.jpg" alt="Gabriel M.">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title volunteers-title">
