--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 									</div>
 								</div>
 								<div class="col-sm-4 col-xs-12 topmargin-sm">
-									<h2>Download Whitepaper</h2>
+									<h2>Whitepaper</h2>
 
-									<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-border button-rounded button-light button-large">English</a>
-									<a href="docs/FLASHWhitepaper-en-Espanol.pdf" target="_blank" class="button button-border button-rounded button-light button-large">Español</a>
+									<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-border button-rounded button-light button-large">Download</a>
+									<!--<a href="docs/FLASHWhitepaper-en-Espanol.pdf" target="_blank" class="button button-border button-rounded button-light button-large">Español</a>-->
 								</div>
 							</div>
 							<!-- .row end -->
@@ -850,7 +850,7 @@
 
 							<div class="center">
 
-								<a href="docs/FLASHWhitepaper.pdf?45146" class="button button-3d button-yellow button-xlarge nobottommargin"><i class="icon-star3"></i>DOWNLOAD OUR WHITEPAPER</a>
+								<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin"><i class="icon-star3"></i>DOWNLOAD OUR WHITEPAPER</a>
 							</div>
 
 							<div class="heading-block title-center nobottomborder topmargin-lg">
