further whitepaper and team updates

--- a/index.html
+++ b/index.html
@@ -93,16 +93,12 @@
 									<input class="form-control" type="text" id="market_price" placeholder="Market Price" value="Market Price" readonly="readonly">
 									<input class="form-control" style="color:red;" id="market_price_percentage" type="text" placeholder="" value="Market Price (%)" readonly="readonly">
 								</form>
+								<div class="whitepaper">
+									<a href="http://localhost/GitLab/flashcoin-landing/docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/NewFlashWhitePaper2018.png"></a>
+								</div>
 							</div>
 						</div>
 					</div>
-					<!-- <marquee onmouseover="this.setAttribute('scrollamount', 0, 0);" onmouseout="this.setAttribute('scrollamount', 6, 0);">
-						<a href="#">FLASH has got updated Whitepaper! </a>
-					</marquee> -->
-					<marquee onmouseover="this.stop()"
-                   onmouseout="this.start()" scrollamount="10" direction="left" class="style41" style="padding-bottom:15px"><a href="#" data-scrollto="#whitepaper"><img src="images/new-1.gif" alt="New Gif"><b> Click here to check the new FLASH Decentralization Whitepaper</b></a>
-                   </marquee>
-				<!-- <marquee><a href="#">FLASH has got updated Whitepaper!</a></marquee> -->
 			</section>
 			<!-- #slider end -->
 
@@ -117,7 +113,7 @@
 					<div id="about" class="page-section">
 						<div class="container clearfix">
 							<div class="row">
-								<div class="col-sm-8 col-xs-12">
+								<div class="col-sm-4 col-xs-12">
 									<div class="topmargin-lg">
 										<h2>What is FLASH?</h2>
 										<p>FLASH is not money, it’s a much bigger idea than money. It’s a community supported blockchain designed for small and fast transactions. People can send and receive FLASH and use it for just about anything, limited only by their imaginations.There
@@ -127,10 +123,11 @@
 										<a href="#" data-scrollto="#flash-advantage" class="button button-rounded button-reveal button-large button-yellow button-light tright"><i class="icon-line-arrow-down"></i><span>The FLASH Advantage</spahttp://localhost/flashcoinweb_new_back/n></a>
 									</div>
 								</div>
-								<div class="col-sm-4 col-xs-12 topmargin-sm">
+								<div class="col-sm-4 col-xs-12 ml-auto topmargin-lg whitepaper">
 									<h2>Whitepaper</h2>
 
-									<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-border button-rounded button-light button-large">Download</a>
+									<!--<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-border button-rounded button-light button-large">Download</a>-->
+									<a href="http://localhost/GitLab/flashcoin-landing/docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/NewFlashWhitePaper2018.png"></a>
 									<!--<a href="docs/FLASHWhitepaper-en-Espanol.pdf" target="_blank" class="button button-border button-rounded button-light button-large">Español</a>-->
 								</div>
 							</div>
@@ -848,9 +845,8 @@
 								<h2>Download Whitepaper</h2>
 							</div>
 
-							<div class="center">
-
-								<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin"><i class="icon-star3"></i>DOWNLOAD OUR WHITEPAPER</a>
+							<div class="center whitepaper">
+								<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img style="width:300px" src="images/NewFlashWhitePaper2018.png"></a>
 							</div>
 
 							<div class="heading-block title-center nobottomborder topmargin-lg">
