--- a/our-team.html
+++ b/our-team.html
@@ -247,6 +247,19 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
+											<img src="images/team/danish-tariq.jpg" alt="Danish">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>Danish Tariq</h4><span>Cyber Security Auditor</a></span></div>
+										</div>
+									</div>
+								</div>
+								<!--Danish end-->
+
+								<div class="col-md-3 col-sm-3 bottommargin">
+									<div class="team">
+										<div class="team-image">
 											<img src="images/team/no-photo.jpg" alt="Max">
 										</div>
 										<div class="team-desc team-desc-bg">
