--- a/footer.html
+++ b/footer.html
@@ -68,7 +68,7 @@
 							<div class="col_one_third col_last">
 
 								<!--CONTENT HERE-->
-								<a target="_blank" href="https://www.cryptaldash.com/new-coin-listing?ref=cnVlbARkxBU0gtY29pbmNvbXBAY3J5cHRhbGRhc2guY29tbWluZG8"><img src="images/CryptalDashWidgets-08.jpg"></a>
+								<!-- <a target="_blank" href="https://www.cryptaldash.com/new-coin-listing?ref=cnVlbARkxBU0gtY29pbmNvbXBAY3J5cHRhbGRhc2guY29tbWluZG8"><img src="images/CryptalDashWidgets-08.jpg"></a> -->
 
 							</div>
 
