--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<meta name="twitter:image:src" content="https://www.flashcoin.io/clients/flashcoin/images/social-fb-plate-flashcoin.jpg" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600|Open+Sans|Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-		<link rel="stylesheet" href="css/04.style.css" type="text/css" />
+		<link rel="stylesheet" href="css/04.style.css?123" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/swiper.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/dark.css" type="text/css" />
 		<link rel="stylesheet" href="css/animate.css" type="text/css" />
@@ -126,9 +126,9 @@
 								<div class="col-sm-4 col-xs-12 ml-auto topmargin-lg whitepaper">
 									<h2>Whitepaper</h2>
 
-									<!--<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-border button-rounded button-light button-large">Download</a>-->
-									<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/NewFlashWhitePaper2018.png"></a>
-									<!--<a href="docs/FLASHWhitepaper-en-Espanol.pdf" target="_blank" class="button button-border button-rounded button-light button-large">Español</a>-->
+									<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-border button-rounded button-light button-large">English</a>
+									<!--<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/NewFlashWhitePaper2018.png"></a>-->
+									<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank" class="button button-border button-rounded button-light button-large">Español</a>
 								</div>
 							</div>
 							<!-- .row end -->
@@ -619,11 +619,12 @@
 										because it is based on LTC, integration. If you operate an exchange and are interested in listing FLASH, please contact <a href="mailto:support@flashcoin.io" target="_top">support@flashcoin.io</a> to receive a file with details on our source
 										code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security)</p>
 									<ul class="clients-grid nobottommargin clearfix">
-										<li><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Clients"></a></li>
-										<li><a href="https://crypto-bridge.org/" target="_blank"><img src="images/exchanges/crypto-bridge.png" alt="Clients"></a></li>
-										<li><a href="https://www.coinexchange.io/" target="_blank"><img src="images/exchanges/coinexchange.png" alt="Clients"></a></li>
-										<li><a href="https://cryptowolf.eu/" target="_blank"><img src="images/exchanges/cryptowolf.png" alt="Clients"></a></li>
-										<li><a href="https://crex24.com/" target="_blank"><img src="images/exchanges/crex24.png" alt="Clients"></a></li>
+										<li><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash exchange"></a></li>
+										<li><a href="https://crypto-bridge.org/" target="_blank"><img src="images/exchanges/crypto-bridge.png" alt="Flash exchange"></a></li>
+										<li><a href="https://indacoin.com/" target="_blank"><img src="images/exchanges/indacoin.png" alt="Flash exchange"></a></li>
+										<li><a href="https://www.coinexchange.io/" target="_blank"><img src="images/exchanges/coinexchange.png" alt="Flash exchange"></a></li>
+										<li><a href="https://cryptowolf.eu/" target="_blank"><img src="images/exchanges/cryptowolf.png" alt="Flash exchange"></a></li>
+										<li><a href="https://crex24.com/" target="_blank"><img src="images/exchanges/crex24.png" alt="Flash exchange"></a></li>
 									</ul>
 								</div>
 							</div>
@@ -844,8 +845,10 @@
 								<h2>Download Whitepaper</h2>
 							</div>
 
-							<div class="center whitepaper">
-								<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img style="width:300px" src="images/NewFlashWhitePaper2018.png"></a>
+							<div class="center">
+								<!--<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img style="width:300px" src="images/NewFlashWhitePaper2018.png"></a>-->
+								<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin">ENGLISH</a>
+								<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin">Español</a>
 							</div>
 
 							<div class="heading-block title-center nobottomborder topmargin-lg">
