--- a/header.html
+++ b/header.html
@@ -166,6 +166,11 @@
 											</a>
 										</li>
 										<li>
+											<a href="paper-wallet-cold-storage-guide.html">
+												<div>HOW TO CREATE A SAFE FLASH COIN PAPER WALLET FOR COLD STORAGE</div>
+											</a>
+										</li>
+										<li>
 											<a href="tutorials.html">
 												<div>VIDEO TUTORIALS</div>
 											</a>
