--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<meta name="twitter:image:src" content="https://www.flashcoin.io/clients/flashcoin/images/social-fb-plate-flashcoin.jpg" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600|Open+Sans|Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-		<link rel="stylesheet" href="css/04.style.css?123" type="text/css" />
+		<link rel="stylesheet" href="css/04.style.css?ver=1.1" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/swiper.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/dark.css" type="text/css" />
 		<link rel="stylesheet" href="css/animate.css" type="text/css" />
@@ -99,6 +99,9 @@
 							</div>
 						</div>
 					</div>
+					<marquee onmouseover="this.stop()"
+                   onmouseout="this.start()" scrollamount="10" direction="left" class="style41" style="padding-bottom:15px"><a href=" https://www.thenewswire.com/archives/A8vFpmoK-announcing-flashcon-2018-a-flash-community-event-with-lead-sponsor-binary-financial.html"  target="_blank"><img src="images/new-1.gif" alt="New Gif"><b> FLASHcon 2018 will be in Vancouver, BC Canada on June 29th and 30th! Email patty@flashcoin.io to RSVP or for more information</b></a>
+                   </marquee>
 			</section>
 			<!-- #slider end -->
 
@@ -618,13 +621,16 @@
 									<p>FLASH supports any legal cryptocurrency exchange, including decentralized exchanges. Our community occasionally contributes funds to get FLASH listed. FLASH is ideal for exchanges, as the transfer speeds and transaction costs are very low and
 										because it is based on LTC, integration. If you operate an exchange and are interested in listing FLASH, please contact <a href="mailto:support@flashcoin.io" target="_top">support@flashcoin.io</a> to receive a file with details on our source
 										code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security)</p>
-									<ul class="clients-grid nobottommargin clearfix">
+									<ul class="grid-4 clients-grid nobottommargin clearfix">
 										<li><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash exchange"></a></li>
 										<li><a href="https://crypto-bridge.org/" target="_blank"><img src="images/exchanges/crypto-bridge.png" alt="Flash exchange"></a></li>
 										<li><a href="https://indacoin.com/" target="_blank"><img src="images/exchanges/indacoin.png" alt="Flash exchange"></a></li>
 										<li><a href="https://www.coinexchange.io/" target="_blank"><img src="images/exchanges/coinexchange.png" alt="Flash exchange"></a></li>
 										<li><a href="https://cryptowolf.eu/" target="_blank"><img src="images/exchanges/cryptowolf.png" alt="Flash exchange"></a></li>
 										<li><a href="https://crex24.com/" target="_blank"><img src="images/exchanges/crex24.png" alt="Flash exchange"></a></li>
+										<li class= "exchanges-border"><a href="https://upcoin.com/" target="_blank"><img src="images/exchanges/upcoin.png" alt="Flash exchange"></a></li>
+										<li class= "exchanges-border"><a href="https://www.boaexchange.com/" target="_blank"><img src="images/exchanges/boa_exchange.png" alt="Flash exchange"></a></li>
+
 									</ul>
 								</div>
 							</div>
