--- a/our-partners.html
+++ b/our-partners.html
@@ -249,6 +249,32 @@
                     </a>
                   </div>
                 </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="https://www.max5dollars.com/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/partners_logo/max5dollars.png" alt="Max5Dollars">
+                    </div>
+                    <div class="team-desc">
+                      <div class="partners-title">
+                        <span>Max5Dollars</span></div>
+                    </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href=" https://check-coin.com/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/partners_logo/check-coin.png" alt="Check-coin">
+                    </div>
+                    <div class="team-desc">
+                      <div class="partners-title">
+                        <span>Check-coin</span></div>
+                    </div>
+                    </a>
+                  </div>
+                </div>
 
               </div>
             </div>
