Paper wallet links added Snapshot detail changed

--- a/flash-snapshot.html
+++ b/flash-snapshot.html
@@ -79,9 +79,9 @@
 									<li><i class="icon-play"></i> If your blockchain was crashed and you need get it back to normal fast</li>
 								</ul>
 								<h2>Step 1: Download flashcoin_blockchain_snapshot file:</h2>
-								<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot_29mar2018.tar.gz" class="button button-3d bottommargin-sm">Download</a>
-								<p>(<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot_29mar2018.tar.gz" class="download-link">https://flashcoin.io/downloads/flashcoin_blockchain_snapshot_29mar2018.tar.gz</a>)<br>
-                          		(SHA1: 1b897b2ecbbefdfa8d5411d9bc46e9971602c370)</p>
+								<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.06Jun2018.tar.gz" class="button button-3d bottommargin-sm">Download</a>
+								<p>(<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.06Jun2018.tar.gz" class="download-link">https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.06Jun2018.tar.gz</a>)<br>
+                          		(SHA1: d09a35f0b7564499aa4283002180a3b25c811721)</p>
 								<p>The blockchain file has size 578Mb.</p>
 
 								<h2>Step 2: Unzip the flashcoin_blockchain_snapshot_*.tar.gz contain:</h2>
