--- a/header.html
+++ b/header.html
@@ -102,6 +102,11 @@
 											</a>
 										</li>
 										<li>
+											<a href="https://paperwallet.flashcoin.io/" target="_blank">
+												<div>PAPER WALLET</div>
+											</a>
+										</li>
+										<li>
 											<a href="#" data-href="#wallet">
 												<div>THIRD PARTY WALLETS</div>
 											</a>
