--- a/index.html
+++ b/index.html
@@ -815,6 +815,10 @@
 											</div>
 										</div>
 									</div>
+									<div class="fancy-title title-border">
+										<h2>Flash <span>Paper</span> Wallet</h2>
+									</div>
+									<a href="https://paperwallet.flashcoin.io/" target="_blank" class="button button-3d topmargin-sm" style="margin-left: 25px;">Flash Paper Wallet</a>
 								</div>
 
 							</div>
