--- a/paper-wallet-cold-storage-guide.html
+++ b/paper-wallet-cold-storage-guide.html
@@ -121,7 +121,8 @@
                 <h2>Step 3:</h2>
             </div>
             <div style="font-size:0.875rm">
-                Download the zip file of paper wallet from (<a href="https://github.com/flash-coin/paperwallet">https://github.com/flash-coin/paperwallet</a>).and copy the code to a live Ubuntu, Please refer screenshots
+                Download the zip file of paper wallet from (<a href="https://github.com/flash-coin/paperwallet">https://github.com/flash-coin/paperwallet</a>).and copy the code to a live Ubuntu, Please refer screenshots.<br> OR <br>
+                You can use online version of paper wallet at <a href="https://paperwallet.flashcoin.io/" target="_blank">paperwallet.flashcoin.io</a> and Go to Step 5(b).
             </div>
              <br>
             <div class="column-title heading-color" style="font-size:0.875rm">
