further updates - iOS wallet added - FLASHCon schedule added

--- a/header.html
+++ b/header.html
@@ -92,6 +92,11 @@
 											</a>
 										</li>
 										<li>
+											<a href="https://itunes.apple.com/in/app/coinodes-flash-wallet/id1397010514" target="_blank">
+												<div>IOS WALLET</div>
+											</a>
+										</li>
+										<li>
 											<a href="#" data-href="#wallet">
 												<div>QT WALLET DOWNLOADS</div>
 											</a>
