--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/et-line.css" type="text/css" /> -->
-		<link rel="stylesheet" href="css/04.custom.css" type="text/css" />
+		<link rel="stylesheet" href="css/04.custom.css?123" type="text/css" />
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<!-- Document Title
 	============================================= -->
@@ -100,8 +100,11 @@
 						</div>
 					</div>
 					<marquee onmouseover="this.stop()"
-                   onmouseout="this.start()" scrollamount="10" direction="left" class="style41" style="padding-bottom:15px"><a href=" https://www.thenewswire.com/archives/A8vFpmoK-announcing-flashcon-2018-a-flash-community-event-with-lead-sponsor-binary-financial.html"  target="_blank"><img src="images/new-1.gif" alt="New Gif"><b> FLASHcon 2018 will be in Vancouver, BC Canada on June 29th and 30th! Email patty@flashcoin.io to RSVP or for more information</b></a>
+                   onmouseout="this.start()" scrollamount="10" direction="left" class="style41" style="padding-bottom:15px"><a href=" https://www.thenewswire.com/archives/A8vFpmoK-announcing-flashcon-2018-a-flash-community-event-with-lead-sponsor-binary-financial.html"  target="_blank"><b> FLASHcon 2018 will be in Vancouver, BC Canada on June 29th and 30th! Email patty@flashcoin.io to RSVP or for more information</b></a>
                    </marquee>
+                   <div class="text-center">
+                   	<a href="docs/FLASHCON_2018_Schedule_of_Events.pdf" target="_blank" class="button button-border button-rounded button-light button-large">FLASHcon Schedule</a>
+                   </div>
 			</section>
 			<!-- #slider end -->
 
@@ -768,7 +771,7 @@
 									<a href="https://play.google.com/store/apps/details?id=com.flash.wallet.android" target="_blank" class="button topmargin-sm play-store-btn"><img src="images/icons/playstor1.png"></a>
 								</div>
 								<div class="col-lg-8">
-									<div class="max-height">
+									<div class="max-height col-lg-12">
 										<div class="fancy-title title-border">
 											<h2>Flash <span>QT</span> Wallets</h2>
 										</div>
@@ -815,10 +818,18 @@
 											</div>
 										</div>
 									</div>
-									<div class="fancy-title title-border">
-										<h2>Flash <span>Paper</span> Wallet</h2>
+									<div class="col-lg-5" style="display: inline-block;">
+										<div class="fancy-title title-border">
+											<h2>Flash <span>iOS</span> Wallet</h2>
+										</div>
+										<a href="https://itunes.apple.com/in/app/coinodes-flash-wallet/id1397010514" target="_blank" class="button topmargin-sm app-store-btn"><img style="height:45px" src="images/icons/app-store.png"></a>
 									</div>
-									<a href="https://paperwallet.flashcoin.io/" target="_blank" class="button button-3d topmargin-sm" style="margin-left: 25px;">Flash Paper Wallet</a>
+									<div class="col-lg-6" style="display: inline-block;">
+										<div class="fancy-title title-border">
+											<h2>Flash <span>Paper</span> Wallet</h2>
+										</div>
+										<a href="https://paperwallet.flashcoin.io/" target="_blank" class="button button-3d topmargin-sm" style="margin-left: 25px;">Flash Paper Wallet</a>
+									</div>
 								</div>
 
 							</div>
