FLASHCon live link added

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                    onmouseout="this.start()" scrollamount="10" direction="left" class="style41" style="padding-bottom:15px"><a href=" https://www.thenewswire.com/archives/A8vFpmoK-announcing-flashcon-2018-a-flash-community-event-with-lead-sponsor-binary-financial.html"  target="_blank"><b> FLASHcon 2018 will be in Vancouver, BC Canada on June 29th and 30th! Email patty@flashcoin.io to RSVP or for more information</b></a>
                    </marquee>
                    <div class="text-center">
-                   	<a href="docs/FLASHCON_2018_Schedule_of_Events.pdf" target="_blank" class="button button-border button-rounded button-light button-large">FLASHcon Schedule</a>
+                   	<a href="docs/FLASHCON_2018_Schedule_of_Events.pdf" target="_blank" class="button button-border button-rounded button-light button-large">FLASHcon Schedule</a> &nbsp;
+                   	<a href="#" target="_blank" class="button button-border button-rounded button-light button-large">FLASHcon Live</a>
                    </div>
 			</section>
 			<!-- #slider end -->
