--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/et-line.css" type="text/css" /> -->
-		<link rel="stylesheet" href="css/04.custom.css?123" type="text/css" />
+		<link rel="stylesheet" href="css/04.custom.css?234" type="text/css" />
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<!-- Document Title
 	============================================= -->
@@ -101,10 +101,10 @@
 					</div>
 					<!--<marquee onmouseover="this.stop()"
                    onmouseout="this.start()" scrollamount="10" direction="left" class="style41" style="padding-bottom:15px"><a href=" https://www.thenewswire.com/archives/A8vFpmoK-announcing-flashcon-2018-a-flash-community-event-with-lead-sponsor-binary-financial.html"  target="_blank"><b> FLASHcon 2018 will be in Vancouver, BC Canada on June 29th and 30th! Email patty@flashcoin.io to RSVP or for more information</b></a>
-                   </marquee>--><br>
+                   </marquee><br>
                    <div class="text-center">
                    	<a href="docs/FLASHCON_2018_Schedule_of_Events.pdf" target="_blank" class="button button-border button-rounded button-light button-large">FLASHcon Schedule</a>  <a href="https://youtu.be/2M7Gk-zRA-I" target="_blank" class="button button-border button-rounded button-light button-large">FLASHcon Live Feed 1</a>  <a href="https://vimeo.com/277749477" target="_blank" class="button button-border button-rounded button-light button-large">FLASHcon Live Feed 2</a>
-                   </div>
+                   </div>-->
 			</section>
 			<!-- #slider end -->
 
@@ -629,7 +629,8 @@
 										because it is based on LTC, integration. If you operate an exchange and are interested in listing FLASH, please contact <a href="mailto:support@flashcoin.io" target="_top">support@flashcoin.io</a> to receive a file with details on our source
 										code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security)</p>
 									<ul class="grid-4 clients-grid nobottommargin clearfix">
-										<li><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash exchange"></a></li>
+										<li><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash Cryptopia exchange"></a></li>
+										<li><a href="https://einstein.exchange/" target="_blank"><img src="images/exchanges/einstein.jpg" alt="Flash Einstein exchange"></a></li>
 										<li><a href="https://crypto-bridge.org/" target="_blank"><img src="images/exchanges/crypto-bridge.png" alt="Flash exchange"></a></li>
 										<li><a href="https://indacoin.com/" target="_blank"><img src="images/exchanges/indacoin.png" alt="Flash exchange"></a></li>
 										<li><a href="https://www.coinexchange.io/" target="_blank"><img src="images/exchanges/coinexchange.png" alt="Flash exchange"></a></li>
