--- a/our-team.html
+++ b/our-team.html
@@ -283,20 +283,7 @@
 
 						<div class="container clearfix">
 							
-							<!--Aaron Hockett-->
 							<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
-								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
-								<div class="team community-leader">
-										<div class="team-image">
-											<img src="images/team/aaron.jpg" alt="Aaron Hockett">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Aaron Hockett</h4><span>Principle Community Leader | <a href="https://www.linkedin.com/in/aaron-hockett-3b874510/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
-										</div>
-									</div>
-								</div>
-								<!--Aaron Hockett end-->
 								<!--Stack -->
 								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
 									<div class="team community-leader">
@@ -309,7 +296,6 @@
 										</div>
 									</div>
 								</div>
-								
 								<!--Stack end-->
 								<!--samsungthedefender-->
 								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
@@ -324,6 +310,19 @@
 									</div>
 								</div>
 								<!--samsungthedefender end-->
+								<!--Enki-->
+								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
+									<div class="team community-leader">
+										<div class="team-image">
+											<img src="images/team/no-photo.jpg" alt="Enki">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>Enki</h4><span>Community Leader</span></div>
+										</div>
+									</div>
+								</div>
+								<!--Enki end-->
 							</div>
 						</div>
 						<!--Community Leaders end-->
